--- a/frontend/src/styles/editor.css
+++ b/frontend/src/styles/editor.css
@@ -109,6 +109,43 @@
   pointer-events: none;
 }
 
+/* Node Views Styling */
+.math-block-wrapper {
+  position: relative;
+  margin: 1em 0;
+}
+
+.math-block-wrapper:hover .math-block-tools {
+  opacity: 1;
+}
+
+.math-block-tools {
+  position: absolute;
+  top: 0.25rem;
+  right: 0.25rem;
+  opacity: 0;
+  transition: opacity 0.2s ease-in-out;
+  z-index: 10;
+}
+
+.code-block-wrapper {
+  position: relative;
+  margin: 1em 0;
+}
+
+.code-block-wrapper:hover .code-block-tools {
+  opacity: 1;
+}
+
+.code-block-tools {
+  position: absolute;
+  top: 0.25rem;
+  right: 0.25rem;
+  opacity: 0;
+  transition: opacity 0.2s ease-in-out;
+  z-index: 10;
+}
+
 /* Mobile optimization */
 @media (max-width: 640px) {
   .editor-toolbar-compact {
